--- a/app/views/leader/orders/new.html.erb
+++ b/app/views/leader/orders/new.html.erb
@@ -48,7 +48,7 @@
         <!-- Wybór paczkomatu -->
         <div data-controller="parcel-locker">
           <label class="mb-1.5 block text-sm font-medium text-gray-700 dark:text-gray-400">
-            Paczkomat InPost lub ORLEN Paczka
+            Paczkomat InPost
           </label>
 
           <%= f.hidden_field :locker_code, data: { parcel_locker_target: "code" } %>
@@ -84,7 +84,7 @@
             </button>
 
             <p class="mt-2 text-center text-xs text-gray-500 dark:text-gray-400">
-              Dostępne opcje: paczkomaty InPost i ORLEN Paczka
+              Dostępne tylko paczkomaty InPost
             </p>
           </div>
         </div>
@@ -119,7 +119,7 @@
           <svg class="mr-2 mt-0.5 h-4 w-4 flex-shrink-0 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
           </svg>
-          <span>Dostawa następuje do wybranego paczkomatu InPost lub ORLEN</span>
+          <span>Dostawa następuje do wybranego paczkomatu InPost</span>
         </li>
         <li class="flex items-start">
           <svg class="mr-2 mt-0.5 h-4 w-4 flex-shrink-0 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 20 20">
