--- a/app/views/public/donations/_gift_section.html.erb
+++ b/app/views/public/donations/_gift_section.html.erb
@@ -47,11 +47,11 @@
       <% if donation.locker_code.present? %>
         <div class="p-4 border border-green-400 rounded-lg bg-green-50">
           <p class="text-sm font-semibold text-gray-900">
-            <%= donation.locker_code %> - <%= donation.locker_name %>
+            <%= donation.locker_name %>
           </p>
-          <p class="text-sm text-gray-600">
-            <%= donation.locker_city %>, <%= donation.locker_post_code %>
-          </p>
+          <% if donation.locker_address.present? %>
+            <p class="text-sm text-gray-600"><%= donation.locker_address %></p>
+          <% end %>
         </div>
       <% else %>
         <div class="p-4 border border-gray-200 rounded-lg bg-gray-50 text-sm text-gray-400">
