--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -34,7 +34,7 @@
                 <%= f.password_field :password,
                     autofocus: true,
                     autocomplete: "new-password",
-                    placeholder: "Minimum 6 znaków",
+                    placeholder: "Min. 8 znaków, wielka i mała litera, cyfra",
                     class: "dark:bg-dark-900 h-11 w-full rounded-lg border border-gray-300 bg-transparent py-2.5 pl-4 pr-11 text-sm text-gray-800 shadow-theme-xs placeholder:text-gray-400 focus:border-brand-300 focus:outline-hidden focus:ring-3 focus:ring-brand-500/10 dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30 dark:focus:border-brand-800" %>
               </div>
               <!-- Confirm Password -->
