--- a/app/views/public/donations/_footer.html.erb
+++ b/app/views/public/donations/_footer.html.erb
@@ -9,8 +9,11 @@
           <strong class="text-gray-700">Fundacja Indywidualności Otwartych</strong><br/>
           Wielicka 42 / B3 (103), 30-552 Kraków, Polska<br/>
           KRS: 0000694615 | NIP: 6793155900 | REGON: 368262166<br/>
-          Kontakt z inspektorem danych osobowych: 
+          Kontakt z inspektorem danych osobowych:
           <a href="mailto:ido@edk.org.pl" class="text-indigo-600 hover:underline">ido@edk.org.pl</a>
+        </p>
+        <p class="mt-2">
+          <%= link_to "Regulamin serwisu", "https://www.edk.org.pl/regulamin-serwisu/", class: "text-indigo-600 hover:underline", target: "_blank", rel: "noopener noreferrer" %>
         </p>
       </div>
       
