--- a/app/views/admin/users/import.html.erb
+++ b/app/views/admin/users/import.html.erb
@@ -22,6 +22,7 @@
           <li><code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">first_name</code> lub <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">imię</code> - imię</li>
           <li><code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">last_name</code> lub <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">nazwisko</code> - nazwisko</li>
           <li><code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">phone</code> lub <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">telefon</code> - numer telefonu (opcjonalne)</li>
+          <li><code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">voivodeship</code> lub <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">województwo</code> - województwo (opcjonalne)</li>
         </ul>
       </div>
 
