--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -45,6 +45,9 @@
             <span class="text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Telefon</span>
           </th>
           <th class="px-6 py-4 text-left">
+            <span class="text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Województwo</span>
+          </th>
+          <th class="px-6 py-4 text-left">
             <span class="text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Rola</span>
           </th>
           <th class="px-6 py-4 text-right">
@@ -75,6 +78,9 @@
               </td>
               <td class="px-6 py-4">
                 <span class="text-sm text-gray-600 dark:text-gray-400"><%= user.phone || '-' %></span>
+              </td>
+              <td class="px-6 py-4">
+                <span class="text-sm text-gray-600 dark:text-gray-400"><%= user.voivodeship&.name || '-' %></span>
               </td>
               <td class="px-6 py-4">
                 <% role_classes = {
@@ -132,7 +138,7 @@
           <% end %>
         <% else %>
           <tr>
-            <td colspan="6" class="px-6 py-12 text-center">
+            <td colspan="7" class="px-6 py-12 text-center">
               <div class="flex flex-col items-center">
                 <svg class="h-12 w-12 text-gray-300 dark:text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z"/>
