Fix email domain and welcome email styling
- Change APP_URL from pakiety.edk.org.pl to wspieram.edk.org.pl in Kubernetes config
- Update email template URL fallbacks to use wspieram.edk.org.pl domain
- Improve welcome email styling with blue colors and narrower 600px layout

--- a/app/views/order_mailer/confirmed.html.erb
+++ b/app/views/order_mailer/confirmed.html.erb
@@ -63,7 +63,7 @@
       </div>
 
       <div style="text-align: center;">
-        <a href="<%= ENV.fetch('APP_URL', 'https://pakiety.edk.org.pl') %>" class="button">
+        <a href="<%= ENV.fetch('APP_URL', 'https://wspieram.edk.org.pl') %>" class="button">
           Przejdź do panelu
         </a>
       </div>
