--- a/app/views/settlement_mailer/reminder.html.erb
+++ b/app/views/settlement_mailer/reminder.html.erb
@@ -76,7 +76,7 @@
       <p>Po dokonaniu wpłaty, prosimy o zgłoszenie tego w systemie.</p>
 
       <p style="text-align: center;">
-        <a href="<%= ENV.fetch('APP_URL', 'https://pakiety.edk.org.pl') %>/leader/settlements" class="button">
+        <a href="<%= ENV.fetch('APP_URL', 'https://wspieram.edk.org.pl') %>/leader/settlements" class="button">
           Przejdź do rozliczeń
         </a>
       </p>
